--- a/style.css
+++ b/style.css
@@ -23,6 +23,24 @@ body {
     gap: 150px;
 }
 
+.left-container button {
+    padding: 10px 20px;
+    display: flex;
+    color: white;
+    background-color: #212121;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+}
+
+.color-indicator {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    border: 1px solid black;
+    background-color: white;
+}
+
 .upper-container,
 .lower-container {
     display: flex;
@@ -34,13 +52,21 @@ body {
     border: solid black 2px;
     height: 480px;
     width: 480px;
+    display: flex;
+    flex-direction: column;
 }
 
 .slidecontainer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-self: center;
     width: 600px;
+}
+
+.slider-value {
+    text-align: center;
+    font-size: 30px;
 }
 
 .slider {
