--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
     display: flex;
     color: white;
     background-color: #212121;
+    border-radius: 10px;
     justify-content: space-between;
     align-items: center;
     font-size: 20px;
